# gmail-label

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  CONTEXT.md  Dockerfile  MAILMIND_AUDIT.md  MAILMIND_CONTENT_CLASSIFICATION_PLAN.md  MAILMIND_STRATEGY.md  PASS_3_COMPLETION_SUMMARY.md  PASS_3_INTEGRATION_NOTES.md  PASS_4_5_REVIEW_DASHBOARD.md  README.md  fly-start.sh  fly.toml  litestream-mac.sh  litestream-mac.yml  litestream.yml  package-lock.json  pyproject.toml  render-start.sh  render.yaml  requirements.txt
.continue/: ._agents  context.md
.devcontainer/: devcontainer.json
.streamlit/: config.toml
MailMind/: credentials.json  pyproject.toml  requirements.txt  review_dashboard.py  test_mailmind.db-shm  test_mailmind.db-wal  test_migration2.db
MailMind/actions/: __init__.py
MailMind/ingestion/: auth.py  fetcher.py
MailMind/ml/: __init__.py  features.py  inference.py  train.py
MailMind/processing/: __init__.py  pipeline.py
MailMind/scripts/: debug_pass3_pipeline.py  train_ml_model.py
MailMind/storage/: __init__.py  database.py  migrations.py  queries.py  review_dashboard.py
MailMind/tests/: test_ml_features.py  test_ml_inference.py  test_persistence.py  test_prediction_persistence.py  test_queries.py
docs/: backups.md
frontend/: index.html  package-lock.json  package.json
launchd/: README.md  com.mailmind.ingestion.plist  com.mailmind.litestream.plist  com.mailmind.litestream.plist.save
mailmind/: PASS3_SUMMARY.txt  __init__.py  config.py  config.yaml.example  fly-start.sh  main.py  pyproject.toml  pytest.ini  requirements.txt  review_dashboard.py  taxonomy.py
mailmind.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/: update_context.py  (+1 more)
(+238 files in other folders)
