[project]
name = "mailmind"
version = "0.1.0"
description = "MailMind: a local-first, privacy-preserving Gmail AI assistant (MVP)"
readme = "README.md"
requires-python = ">=3.11"
authors = [ { name = "MailMind Contributors" } ]
dependencies = [
  "PyYAML>=6.0",
  "click>=8.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

